--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@loopback/authentication": "^10.1.3",
     "@loopback/boot": "^6.1.3",
     "@loopback/core": "^5.1.3",
     "@loopback/repository": "^6.1.3",
@@ -58,6 +59,7 @@
     "dijkstrajs": "^1.0.3",
     "graphlib": "^2.1.8",
     "loopback-connector-mysql": "^5.4.4",
+    "parse-bearer-token": "1.0.1",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
