--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "dijkstrajs": "^1.0.3",
     "graphlib": "^2.1.8",
     "loopback-connector-mysql": "^5.4.4",
+    "node-fetch": "^3.3.2",
     "parse-bearer-token": "1.0.1",
     "tslib": "^2.0.0"
   },
