--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@loopback/testlab": "^6.1.3",
     "@types/graphlib": "^2.1.9",
     "@types/node": "^16.18.50",
+    "@types/node-fetch": "^2.6.7",
     "eslint": "^8.48.0",
     "source-map-support": "^0.5.21",
     "typescript": "~5.2.2"
