Algunas correcciones de migración

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,9 @@ typings/
 
 # Cache used by TypeScript's incremental build
 *.tsbuildinfo
+
+#Opción para ignorar la carpeta datasources que esta dentro de src
+!/src/datasources
+
+
+
